# mkdocs-translate-plugin

./: .gitignore  .pre-commit-config.yaml  README.md  REUSE.toml  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml
docs/: debian.en.md  index.en.md  mdsyntax.en.md  uptimekuma.en.md
src/mkdocs_translate_plugin/: helpers.py  log.py  plugin.py  translation_services.py
src/mkdocs_translate_plugin/translation_services/: __init__.py  deepl.py  saia.py  simpleen.py
tests/: test_helpers.py
